--- a/cv/index.html
+++ b/cv/index.html
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="intro-section about">
-      <h1 class="title">aboutme </h1>
+      <h1 class="title">About Me</h1>
       <p class="paragraph">
         Hi everyone! I am Denis, a junior full-stack developer.
         I studied Informatics and Computers Engineering at <a target="_blank" href="https://ice.uniwa.gr/en/home/">University of West Attica</a> , currently attending a 8-months course on
