--- a/cv/index.html
+++ b/cv/index.html
@@ -26,9 +26,10 @@
     <div class="intro-section about">
       <h1 class="title">About Me</h1>
       <p class="paragraph">
-        Hi everyone! I am Denis, a junior full-stack developer.
+        Hi everyone!
+        I am Denis, a junior full-stack developer.
         I studied Informatics and Computers Engineering at <a target="_blank" href="https://ice.uniwa.gr/en/home/">University of West Attica</a> , currently attending a 8-months course on
-        <a target="_blank" href="https://codingfactory.aueb.gr/"> full-stack development and software engineering</a>
+        <a target="_blank" href="https://codingfactory.aueb.gr/">full-stack development and software engineering</a>
         at Athens University of Economics and Business.
         I try my best to improve my skills on back-end while studying. My favorite thing in programming is problem solving.
       </p>
