--- a/cv/index.html
+++ b/cv/index.html
@@ -28,10 +28,11 @@
       <p class="paragraph">
         Hi everyone!
         I am Denis, a junior full-stack developer.
-        I studied Informatics and Computers Engineering at <a target="_blank" href="https://ice.uniwa.gr/en/home/">University of West Attica</a> , currently attending a 8-months course on
-        <a target="_blank" href="https://codingfactory.aueb.gr/">full-stack development and software engineering</a>
-        at Athens University of Economics and Business.
-        I try my best to improve my skills on back-end while studying. My favorite thing in programming is problem solving.
+        I studied Informatics and Computers Engineering, currently attending a course on
+        full-stack development and software engineering.
+        I try my best to improve my skills on back-end while working and studying.
+        Programming has been exciting for me since my very first line of code.
+        My favorite thing in programming is problem solving.
       </p>
     </div>
     <div class="intro-section contact">
@@ -90,11 +91,6 @@
           <p>University of West Attica , Athens</p>
           <time>2014 - 2019</time>
         </div>
-        <div class="timeline-block">
-          <h1>Department of Biomedical Engineering</h1>
-          <p>University of West Attica , Athens</p>
-          <time>2013 - 2014</time>
-        </div>
       </div>
     </div>
     <div class="detail-section pg-skill">
@@ -142,7 +138,6 @@
     <div class="detail-section tool-skill">
       <div class="detail-title">
         <div class="title-icon">
-          <!-- <i class="fa-solid fa-code"></i> -->
            <i class="fa-solid fa-screwdriver"></i>
         </div>
         <span>Physical Skills<span>
@@ -211,17 +206,6 @@
           <p>DYNASEC Security</p>
           <time>2018 - 2022</time>
         </div>
-        <div class="timeline-block">
-          <h1>Food Service</h1>
-          <p>Variant Restaurants</p>
-          <time>2009 - 2017</time>
-        </div>
-        <div class="timeline-block">
-          <h1>Electrical Installations</h1>
-          <p></p>
-          <time>2004 - 2009</time>
-        </div>
-
       </div>
     </div>
 
