--- a/cv/index.html
+++ b/cv/index.html
@@ -89,7 +89,7 @@
         <div class="timeline-block">
           <h1>Department of Informatics and Computer Engineering</h1>
           <p>University of West Attica , Athens</p>
-          <time>2014 - 2019</time>
+          <time>2014 - anticipated graduation Dec 2026</time>
         </div>
       </div>
     </div>
@@ -198,7 +198,7 @@
         </div>
         <div class="timeline-block">
           <h1>Vehicles Security Systems Installer</h1>
-          <p>Pandora Auto-Moto alarms</p>
+          <p>Pandora Moto alarms</p>
           <time>2022 - 2023</time>
         </div>
         <div class="timeline-block">
